--- a/apps/host/public/index.html
+++ b/apps/host/public/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Products</title>
+    <title>Host</title>
+
+    <script defer src="http://localhost:8081/remoteEntry.js"></script>
   </head>
-  <body></body>
+  <body>
+    <div id="products"></div>
+  </body>
 </html>
