updated host app with links to other apps

--- a/apps/host/public/index.html
+++ b/apps/host/public/index.html
@@ -7,8 +7,11 @@
     <title>Host</title>
 
     <script defer src="http://localhost:8081/remoteEntry.js"></script>
+    <script defer src="http://localhost:8082/remoteEntry.js"></script>
   </head>
   <body>
+    <div id="cart"></div>
     <div id="products"></div>
+    <div id="host"></div>
   </body>
 </html>
